current_error.txt
iâ¯ user@pc01 ð“…¨ ~/rotko/githem âž¤ 633cb9d|devâœ“
10976 Â± cargo run --bin githem-api                                                                                                                        [0m]âœ“
   Compiling githem-api v0.1.0 (/home/user/rotko/githem/api)
error[E0433]: failed to resolve: could not find `debug_handler` in `axum`
   --> api/src/http.rs:107:9
    |
107 | #[axum::debug_handler]
    |         ^^^^^^^^^^^^^ could not find `debug_handler` in `axum`
    |
note: found an item that was configured out
   --> /home/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/axum-0.8.4/src/lib.rs:479:23
    |
479 | pub use axum_macros::{debug_handler, debug_middleware};
    |                       ^^^^^^^^^^^^^
note: the item is gated behind the `macros` feature
   --> /home/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/axum-0.8.4/src/lib.rs:478:7
    |
478 | #[cfg(feature = "macros")]
    |       ^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `fn(Path<String>, Query<QueryParams>, ...) -> ... {handle_request}: Handler<_, _>` is not satisfied
   --> api/src/http.rs:271:30
    |
271 |         .route("/*path", get(handle_request))
    |                          --- ^^^^^^^^^^^^^^ the trait `Handler<_, _>` is not implemented for fn item `fn(Path<String>, Query<QueryParams>, HeaderMap) -> ... {handle_request}`
    |                          |
    |                          required by a bound introduced by this call
    |
    = note: Consider using `#[axum::debug_handler]` to improve the error message
    = help: the following other types implement trait `Handler<T, S>`:
              `MethodRouter<S>` implements `Handler<(), S>`
              `axum::handler::Layered<L, H, T, S>` implements `Handler<T, S>`
note: required by a bound in `axum::routing::get`
   --> /home/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/axum-0.8.4/src/routing/method_routing.rs:441:1
    |
441 | top_level_handler_fn!(get, GET);
    | ^^^^^^^^^^^^^^^^^^^^^^---^^^^^^
    | |                     |
    | |                     required by a bound in this function
    | required by this bound in `get`
    = note: the full name for the type has been written to '/home/user/rotko/githem/target/debug/deps/githem_api-f2105ed3239c8f8a.long-type-17803933129664973488.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = note: this error originates in the macro `top_level_handler_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

Some errors have detailed explanations: E0277, E0433.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `githem-api` (bin "githem-api") due to 2 previous errors
